# pdfreport-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  env-rules.js  gulpfile.js  package.json  pnpm-lock.yaml  rust-toolchain
assets/: broken.json  chapter.json  example copy.json  example.json  long-example-2.json  long-example.json  output.json  svg-test.html  text-test.html  track.html
crates/document-render/: Cargo.toml
crates/document-render/src/: error.rs  lib.rs
crates/document-render/src/document_builder/: document_writer.rs  mod.rs
crates/document-render/src/fonts/: attributes.rs  font_collection.rs  font_family_collection.rs
crates/document-render/src/geometry/: mod.rs
crates/logzio/: Cargo.toml
crates/logzio/src/: lib.rs
crates/merges/: Cargo.toml
crates/merges/src/: lib.rs
crates/optional-merge-derive/: Cargo.toml
crates/optional-merge-derive/bindings/: MergeableBorderStyle.ts  MergeableStyle.ts
crates/optional-merge-derive/src/: associated_struct.rs  config.rs  field_options.rs  lib.rs  oldlib.rs.bak  output.rs
crates/optional-merge-derive/tests/: mergeable.rs
crates/pdf-render/: Cargo.toml  README.md
crates/pdf-render/bindings/: BorderRadiusStyle.ts  BorderStyle.ts  Direction.ts  DocStructure.ts  DomNode.ts  EdgeStyle.ts  FlexAlign.ts  FlexStyle.ts  FlexWrap.ts  FontAttributes.ts  FontFamilyInfo.ts  FontInfo.ts  FontSlant.ts  FontStyles.ts  FontWeight.ts  ImageNode.ts  Mergeable.ts  MergeableBorderRadiusStyle.ts  MergeableBorderStyle.ts  MergeableEdgeStyle.ts  MergeableFlexStyle.ts  MergeableFontStyles.ts  MergeableStyle.ts  PageBreakRule.ts  RequiredEdgeStyle.ts  Style.ts  StyledNode.ts  TextChild.ts  TextNode.ts  TextTransformation.ts  Unmergeable.ts
crates/pdf-render/src/: error.rs  lib.rs  page_sizes.rs
crates/pdf-render/src/block_layout/: layout_engine.rs  mod.rs  style_conversions.rs  yoga_layout.rs
crates/pdf-render/src/block_layout/paginated_layout/: draw_cursor.rs  layout_visitor.rs  mod.rs  node_visitor.rs  paginated_node.rs
crates/pdf-render/src/block_layout/yoga/: mod.rs  node_context.rs  style_conversions.rs
crates/pdf-render/src/doc_structure/: dom_node.rs  fonts.rs  has_node_id.rs  image_node.rs  mod.rs  styled_node.rs  text_node.rs
crates/pdf-render/src/document_builder/: document_writer.rs  mod.rs
crates/pdf-render/src/dom/: mod.rs
crates/pdf-render/src/fonts/: attributes.rs  font_collection.rs  font_data.rs  font_family_collection.rs  font_id.rs  mod.rs
crates/pdf-render/src/geometry/: conversions.rs  mod.rs
crates/pdf-render/src/image/: mod.rs
crates/pdf-render/src/image/svg/: attributes.rs  mod.rs
crates/pdf-render/src/paragraph_layout/: layout_style.rs  line_metrics.rs  mod.rs  styles.rs  text_block.rs
crates/pdf-render/src/pdf_builder/: mod.rs  pdf_writer.rs  print_pdf_writer.rs
crates/pdf-render/src/pdf_writer/: mod.rs  pdf_writer.rs  print_pdf_writer.rs
crates/pdf-render/src/print_pdf_writer/: corners.rs  debug.rs  font_lookup.rs  mod.rs  rect.rs
crates/pdf-render/src/rich_text/: dom_node_conversion.rs  mod.rs
crates/pdf-render/src/stylesheet/: border_radius.rs  border_style.rs  edge_style.rs  flex_style.rs  flex_values.rs  font_styles.rs  mod.rs  page_break_rule.rs  style.rs  test.rs  text_transformation.rs
crates/pdf-render/src/utils/: debug_cursor.rs  dom_lookup.rs  mod.rs  node_lookup.rs  parent_lookup.rs  tree_iter.rs  unique_id.rs
crates/pdf-render/src/values/: color.rs  conversions.rs  geometry.rs  mod.rs
crates/pdf-writer/: Cargo.toml
crates/pdf-writer/src/: conversions.rs  error.rs  lib.rs
crates/prototype-implementation/: Cargo.toml
crates/prototype-implementation/src/: assemble_pdf.rs  error.rs  main.rs  page_sizes.rs  resource_cache.rs  rich_text.rs  styles.rs  text_layout.rs  units.rs
crates/prototype-implementation/src/block_layout/: mod.rs
crates/prototype-implementation/src/dom/: mod.rs  nodes.rs  style.rs
crates/prototype-implementation/src/pdf_writer/: mod.rs  svg.rs
dead_code_to_be_deleted/paginated_layout/: dom_node.rs
src/: assemble_pdf.rs  block_layout.rs  cli.rs  dom.rs  error.rs  fonts.rs  line_metric.rs  logger.rs  main.rs  pdf_writer.rs  resource_cache.rs  rich_text.rs  server.rs  styles.rs  text_layout.rs  units.rs
src/block_layout/: flex_style.rs  mod.rs
src/dom/: mod.rs  nodes.rs  style.rs
src/math/: rect.rs
src/paginated_layout/: block_container.rs  mod.rs  text_node.rs
src/pdf_writer/: mod.rs  svg.rs
