[package]
name = "pdfreport"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "cli"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[workspace]
members = ["crates/*"]

[dependencies]
printpdf = { version = "*", features = ["svg"] }
actix-web = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

pdf-render = { path = "crates/pdf-render" }

optional-merge-derive = { path = "crates/optional-merge-derive" }
