[package]
name = "logzio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "*"
log = "*"
log4rs = "*"
reqwest = { version = "*", features = ["blocking"] }
crossbeam-channel = "*"
itertools = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
chrono = "*"
tracing = "0.1"
tracing-subscriber = "0.3"