[package]
name = "pdf-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "*", features = ["derive"] }
thiserror = "*"
printpdf = { version = "0.5", features = ["svg"] }
num = "*"
num-traits = "*"
num-derive = "*"
bytes = "*"
skia-safe = { version = "*", features = ["textlayout"] }
ts-rs = { version = "*" }
lazy_static = "*"
regex = "*"
tracing = "0.1"
roxmltree = "*"
serde_with = "*"

color_processing = "*"
polyhorn-yoga = "*"

optional-merge-derive = { path = "../optional-merge-derive" }
merges = { path = "../merges" }
